<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App specific -->
    <string name="app_name">ChallengeQuest</string>
    <string name="title_activity_challenge_quests">ChallengeQuests</string>
    <string name="title_challenge_detail">Challenge Detail</string>

    <!-- Common -->
    <string name="common_label_xp">XP:</string>
    <string name="common_suffix">XP</string>
    <string name="common_label_level_progress">Current level progress</string>
    <string name="common_label_inventory_title">Inventory:</string>
    <string name="common_button_new_quest">New Quest!</string>
    <string name="common_label_hero_name_default">HeroNameGoesHere</string>
    <string name="common_label_loading">Loading ...</string>
    <string name="common_button_g_plus">Google+</string>
    <string name="common_button_start">Start</string>
    <string name="common_button_settings">Settings</string>
    <string name="common_label_character_overview">Character overview</string>
    <string name="hello_world">Hello world!</string>
    <string name="editable_empty"></string>
    <string name="common_label_empty">Empty</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_creature_db">Delete Creatures</string>

    <!-- Default strings -->
    <string name="challenge_default_fragment_title">New Challenge Fragment!</string>
    <string name="recent_activity">Recent activity</string>

    <!-- Start Page -->
    <string name="start_page_welcome">Welcome\n HeroNameGoesHere </string>
    <string name="start_page_active_quests">Currently active quests</string>
    <string name="start_page_past_quests">Completed quests</string>

    <!-- Hero creation -->
    <string name="hero_creation_welcome">Welcome to Challenge Quests!/n It\'s time to create your playerHero!</string>
    <string name="hero_creation_name">Choose your name: </string>
    <string name="hero_creation_gender">Choose your gender: </string>
    <string name="hero_creation_gender_female">female</string>
    <string name="hero_creation_gender_male">male</string>
    <string name="hero_creation_race">Choose your race: </string>
    <string name="hero_creation_race_human">Human</string>
    <string name="hero_creation_race_elf">Elf</string>
    <string name="hero_creation_race_dwarf">Dwarf</string>
    <string name="hero_creation_race_gnome">Gnome</string>
    <string name="hero_creation_race_giant">Giant</string>
    <string name="hero_creation_button_create">Create</string>
    <string name="hero_creation_button_reset">Reset</string>
    <string name="title_activity_character_creation">CharacterCreation</string>
    <string name="hero_creation_skip_tutorial">Skip Tutorial</string>

    <!-- Progress -->
    <string name="progress_title">Current progress</string>

    <!-- Quest list & Quest overview -->
    <string name="quest_list_title">Current Campaign</string>
    <string name="quest_title_default">New Quest</string>
    <string name="loot_default">Latest loot: None</string>
    <string name="quest_chapter_select">Chapter select:</string>
    <string name="quest_description">A quest into the unknown world of getting fit!
Builds up the physical prowess and refreshes the mind. Each chapter requires several feats from our mighty playerHero HeroNameGoesHere with increasing difficulty over time.

The disciplines in which you are going to be tested are:
Crunches
Push ups
Plank
Running</string>
    <string name="chapter_select">Chapter select:</string>
    <string name="new_campaign">New Campaign</string>
    <string name="new_quest">New Quest</string>

    <!-- Chapter overview -->
    <string name="chapter_title_default">Chapter 1: Beginning</string>
    <string name="chapter_button_stop">Stop</string>
    <string name="chapter_button_reset">Reset</string>
    <string name="chapter_button_pause">Pause</string>
    <string name="chapter_button_retry">Retry</string>
    <string name="chapter_label_record">Record:</string>
    <string name="chapter_label_rank">Rank</string>
    <string name="chapter_label_rewards">Rewards</string>

    <!-- Hero overview -->
    <string name="title_activity_character_overview">CharacterOverview</string>
    <string name="hero_label_stats">Stats</string>
    <string name="hero_label_strength">Strength</string>
    <string name="hero_label_agility">Agility</string>
    <string name="hero_label_wisdom">Wisdom</string>
    <string name="hero_label_vitality">Vitality</string>
    <string name="hero_label_damage">Damage</string>
    <string name="hero_label_evade">Evade</string>
    <string name="hero_label_luck">Luck</string>
    <string name="hero_label_hit_points">Hit points</string>
    <string name="hero_label_helmet">Helmet</string>
    <string name="hero_label_armor">Armor</string>
    <string name="hero_label_weapon">Weapon</string>
    <string name="hero_label_shield">Shield</string>
    <string name="hero_label_boots">Boots</string>
    <string name="hero_label_amulet">Amulet</string>
    <string name="hero_label_ring">Ring</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Campaign creation -->
    <string name="tutorial_title">Tap to get started!</string>
    <string name="tutorial_description">Your first ever campaign. This will take you trough the basics of using the app.</string>
   <string-array name="tutorial_quests">
       <item>Check character sheet</item>
       <item>Swipe to the Right to quickly access your character sheet, or tap the character button on this screenCheck character sheet.</item>
       <item>Check the list of Current Campaigns and Quests</item>
       <item>Swipe to the Left to reveal a list of all you ongoing campaigns and quests.A list of your most recent campaigns and quests is also available on this screen.</item>
       <item>Check the details of this campaign.</item>
       <item>Click on the campaign entry in the lit ot see the details and all quests available in it.</item>
       <item>Create your first campaign!</item>
       <item>Click on the "Create Campaign" button an follow the wizard to create your first campaign.</item>
   </string-array>
</resources>
