<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/challenge_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeDetailActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical">

    <!-- TODO make this a scrollable view as content in landscape orientation might exceed screen.-->
    <TextView android:id="@+id/quest_title"
        android:layout_height="24dp"
        android:layout_width="match_parent"
        android:text="@string/quest_title_default"/>

    <TextView android:id="@+id/quest_chapter_select"
        android:layout_height="24dp"
        android:layout_width="match_parent"
        android:text="@string/quest_chapter_select"/>

    <GridView
        android:id="@+id/quest_chapters_grid"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:numColumns="@integer/quest_chapters_columns"
        android:columnWidth="@dimen/common_grid_column_width"
        android:verticalSpacing="@dimen/common_grid_spacing"
        android:horizontalSpacing="@dimen/common_grid_spacing">
    </GridView>

    <TextView android:id="@+id/quest_description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/quest_description"/>

</LinearLayout>

