<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.swinginpenguin.vmarinov.challengequest.sections.startup.ChallengeQuests">

    <TextView
        android:id="@+id/label_loading"
        android:text="@string/common_label_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_game_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_button_start"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="startButtonClicked"/>

    <Button
        android:id="@+id/button_google_plus_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_button_g_plus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:onClick="loginButtonClicked"/>

</RelativeLayout>
