<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/progress_overview"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.swinginpenguin.vmarinov.challengequest.sections.character.fragments.QuestProgressOverviewFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/start_page_welcome"/>

    <TextView
        android:id="@+id/hero_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/welcome"
        android:textAlignment="center"/>

    <ImageButton
        android:id="@+id/hero_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/hero_name"
        android:layout_centerHorizontal="true"
        android:onClick="onHeroButtonClicked"/>

    <TextView
        android:id="@+id/current_level_progress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/progress_title"
        android:layout_below="@+id/hero_button"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/xpProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/current_level_progress"/>

    <!-- Add a textfield for the current XP level -->
    <TextView
        android:id="@+id/current_xp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xpProgressBar"
        android:layout_alignLeft="@id/xpProgressBar"
        android:text="" />
    <TextView
        android:id="@+id/current_xp_suffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/current_xp_value"
        android:layout_below="@id/xpProgressBar"
        android:text="@string/common_suffix" />
    <TextView
        android:id="@+id/target_xp_suffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/xpProgressBar"
        android:layout_below="@id/xpProgressBar"
        android:text="@string/common_suffix" />
    <TextView
        android:id="@+id/target_xp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xpProgressBar"
        android:layout_toLeftOf="@id/target_xp_suffix"
        android:text="" />


    <ListView
        android:id="@+id/recent_activity_list"
        android:layout_width="326dp"
        android:layout_height="120dp"
        android:layout_below="@id/current_xp_value"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/startNewCampaign"
        android:text="@string/new_campaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recent_activity_list"
        android:layout_alignLeft="@id/recent_activity_list"/>
    <Button
        android:id="@+id/startNewQuest"
        android:text="@string/new_quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recent_activity_list"
        android:layout_toRightOf="@id/startNewCampaign"/>

</RelativeLayout>
